After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 653934 - clutter-gtk: incorrect return value annotation for gtk_clutter_get_stage
clutter-gtk: incorrect return value annotation for gtk_clutter_get_stage
Status: RESOLVED FIXED
Product: clutter-gtk
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: clutter-gtk maintainer(s)
clutter-gtk maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-07-04 10:37 UTC by Simon Wenner
Modified: 2011-07-13 11:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix incorrect annotation (951 bytes, patch)
2011-07-04 10:37 UTC, Simon Wenner
committed Details | Review

Description Simon Wenner 2011-07-04 10:37:01 UTC
Created attachment 191222 [details] [review]
fix incorrect annotation

gtk_clutter_get_stage should not transfer the ownership of the returned stage.

Patch attached.
Comment 1 Emmanuele Bassi (:ebassi) 2011-07-04 11:36:05 UTC
Review of attachment 191222 [details] [review]:

whoopsie. looks good.
Comment 2 Simon Wenner 2011-07-04 16:49:18 UTC
I don't have commit access, yet. Please commit it for me.
Comment 3 Emmanuele Bassi (:ebassi) 2011-07-13 10:43:57 UTC
re-assigning to the correct product.
Comment 4 Emmanuele Bassi (:ebassi) 2011-07-13 11:41:45 UTC
Attachment 191222 [details] pushed to master