fix incorrect return value annotation

gtk_clutter_get_stage should not transfer the ownership of the returned stage.

https://bugzilla.gnome.org/show_bug.cgi?id=653934